adding cirriculum
