# docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /api/v1
 definitions:
+  api.CreateCirriculumRequest:
+    properties:
+      description:
+        type: string
+      title:
+        type: string
+      week:
+        type: integer
+    required:
+    - description
+    - title
+    - week
+    type: object
   api.CreateNewsRequest:
     properties:
       category:
@@ -52,6 +65,21 @@ definitions:
     properties:
       user_id:
         type: string
+    type: object
+  models.Cirriculum:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      title:
+        type: string
+      user_id:
+        type: string
+      week:
+        type: integer
     type: object
   models.News:
     properties:
@@ -182,6 +210,60 @@ paths:
       summary: Register a new user
       tags:
       - auth
+  /cirriculum:
+    get:
+      description: Fetches a list of all cirriculum items
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Cirriculum list
+          schema:
+            items:
+              $ref: '#/definitions/models.Cirriculum'
+            type: array
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Get all cirriculum
+      tags:
+      - cirriculum
+    post:
+      consumes:
+      - application/json
+      description: Adds a new cirriculum (requires authentication)
+      parameters:
+      - description: Cirriculum details
+        in: body
+        name: cirriculum
+        required: true
+        schema:
+          $ref: '#/definitions/api.CreateCirriculumRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Cirriculum created
+          schema:
+            $ref: '#/definitions/models.Cirriculum'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a cirriculum
+      tags:
+      - cirriculum
   /news:
     get:
       description: Fetches a list of all news items
